parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    DIVIDE_ASSIGN
    MINUS_ASSIGN
    PACKAGE
    PLUS_ASSIGN
    RANGE
    SEMICOLON
    TIMES_ASSIGN

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> short_var_decl
Rule 5     statement -> print_stmt
Rule 6     statement -> for_stmt
Rule 7     statement -> function_decl
Rule 8     statement -> slice_decl
Rule 9     statement -> var_decl
Rule 10    statement -> switch_stmt
Rule 11    statement -> map_decl
Rule 12    statement -> multi_param_function
Rule 13    statement -> scan_stmt
Rule 14    statement -> complete_var_dec
Rule 15    statement -> block
Rule 16    statement -> if_else
Rule 17    statement -> array_decl
Rule 18    statement -> function_no_return
Rule 19    statement -> increment_stmt
Rule 20    expression -> expression PLUS expression
Rule 21    expression -> expression MINUS expression
Rule 22    expression -> expression TIMES expression
Rule 23    expression -> expression DIVIDE expression
Rule 24    expression -> expression MODULO expression
Rule 25    expression -> LPAREN expression RPAREN
Rule 26    expression -> INTEGER
Rule 27    expression -> FLOAT
Rule 28    expression -> STRING
Rule 29    expression -> VARIABLE
Rule 30    expression -> TRUE
Rule 31    expression -> FALSE
Rule 32    expression_list -> expression
Rule 33    expression_list -> expression COMMA expression_list
Rule 34    condition -> expression GT expression
Rule 35    condition -> expression LT expression
Rule 36    condition -> expression GE expression
Rule 37    condition -> expression LE expression
Rule 38    condition -> expression EQ expression
Rule 39    condition -> expression NE expression
Rule 40    condition -> condition AND condition
Rule 41    condition -> condition OR condition
Rule 42    condition -> NOT condition
Rule 43    condition -> expression
Rule 44    short_var_decl -> VARIABLE DECLARE_ASSIGN expression
Rule 45    print_stmt -> FMT DOT PRINTLN LPAREN expression RPAREN
Rule 46    print_stmt -> FMT DOT PRINT LPAREN expression RPAREN
Rule 47    for_stmt -> FOR condition block
Rule 48    function_decl -> FUNC VARIABLE LPAREN RPAREN type LBRACE return_stmt RBRACE
Rule 49    function_decl -> FUNC VARIABLE LPAREN RPAREN type LBRACE statements return_stmt RBRACE
Rule 50    type -> INT_TYPE
Rule 51    type -> FLOAT64_TYPE
Rule 52    type -> STRING_TYPE
Rule 53    type -> BOOL_TYPE
Rule 54    return_stmt -> RETURN expression
Rule 55    slice_decl -> VARIABLE DECLARE_ASSIGN LBRACKET RBRACKET type LBRACE RBRACE
Rule 56    var_decl -> VAR VARIABLE type
Rule 57    switch_stmt -> SWITCH VARIABLE LBRACE case_list default_stmt RBRACE
Rule 58    case_list -> case_list case_stmt
Rule 59    case_list -> case_stmt
Rule 60    case_stmt -> CASE INTEGER COLON statements
Rule 61    case_stmt -> CASE STRING COLON statements
Rule 62    default_stmt -> DEFAULT COLON statements
Rule 63    map_decl -> VARIABLE DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE RBRACE
Rule 64    map_decl -> VARIABLE DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE map_items RBRACE
Rule 65    map_items -> map_item
Rule 66    map_items -> map_item COMMA map_items
Rule 67    map_item -> STRING COLON expression
Rule 68    multi_param_function -> FUNC VARIABLE LPAREN parameter_list RPAREN type LBRACE return_stmt RBRACE
Rule 69    multi_param_function -> FUNC VARIABLE LPAREN parameter_list RPAREN type LBRACE statements return_stmt RBRACE
Rule 70    parameter_list -> parameter
Rule 71    parameter_list -> parameter COMMA parameter_list
Rule 72    parameter -> VARIABLE type
Rule 73    scan_stmt -> FMT DOT SCAN LPAREN AMPERSAND VARIABLE RPAREN
Rule 74    increment_stmt -> VARIABLE INCREMENT
Rule 75    complete_var_dec -> VAR VARIABLE type ASSIGN expression
Rule 76    block -> LBRACE statements RBRACE
Rule 77    block -> LBRACE RBRACE
Rule 78    if_else -> IF condition block ELSE block
Rule 79    array_decl -> VARIABLE DECLARE_ASSIGN LBRACKET INTEGER RBRACKET type LBRACE expression_list RBRACE
Rule 80    function_no_return -> FUNC VARIABLE LPAREN parameter_list RPAREN block

Terminals, with rules where they appear

AMPERSAND            : 73
AND                  : 40
ASSIGN               : 75
BOOL_TYPE            : 53
CASE                 : 60 61
COLON                : 60 61 62 67
COMMA                : 33 66 71
CONST                : 
DECLARE_ASSIGN       : 44 55 63 64 79
DEFAULT              : 62
DIVIDE               : 23
DIVIDE_ASSIGN        : 
DOT                  : 45 46 73
ELSE                 : 78
EQ                   : 38
FALSE                : 31
FLOAT                : 27
FLOAT64_TYPE         : 51
FMT                  : 45 46 73
FOR                  : 47
FUNC                 : 48 49 68 69 80
GE                   : 36
GT                   : 34
IF                   : 78
INCREMENT            : 74
INTEGER              : 26 60 79
INT_TYPE             : 50
LBRACE               : 48 49 55 57 63 64 68 69 76 77 79
LBRACKET             : 55 63 64 79
LE                   : 37
LPAREN               : 25 45 46 48 49 68 69 73 80
LT                   : 35
MAP                  : 63 64
MINUS                : 21
MINUS_ASSIGN         : 
MODULO               : 24
NE                   : 39
NOT                  : 42
OR                   : 41
PACKAGE              : 
PLUS                 : 20
PLUS_ASSIGN          : 
PRINT                : 46
PRINTLN              : 45
RANGE                : 
RBRACE               : 48 49 55 57 63 64 68 69 76 77 79
RBRACKET             : 55 63 64 79
RETURN               : 54
RPAREN               : 25 45 46 48 49 68 69 73 80
SCAN                 : 73
SEMICOLON            : 
STRING               : 28 61 67
STRING_TYPE          : 52 63 64
SWITCH               : 57
TIMES                : 22
TIMES_ASSIGN         : 
TRUE                 : 30
VAR                  : 56 75
VARIABLE             : 29 44 48 49 55 56 57 63 64 68 69 72 73 74 75 79 80
error                : 

Nonterminals, with rules where they appear

array_decl           : 17
block                : 15 47 78 78 80
case_list            : 57 58
case_stmt            : 58 59
complete_var_dec     : 14
condition            : 40 40 41 41 42 47 78
default_stmt         : 57
expression           : 20 20 21 21 22 22 23 23 24 24 25 32 33 34 34 35 35 36 36 37 37 38 38 39 39 43 44 45 46 54 67 75
expression_list      : 33 79
for_stmt             : 6
function_decl        : 7
function_no_return   : 18
if_else              : 16
increment_stmt       : 19
map_decl             : 11
map_item             : 65 66
map_items            : 64 66
multi_param_function : 12
parameter            : 70 71
parameter_list       : 68 69 71 80
print_stmt           : 5
program              : 0
return_stmt          : 48 49 68 69
scan_stmt            : 13
short_var_decl       : 4
slice_decl           : 8
statement            : 2 3
statements           : 1 2 49 60 61 62 69 76
switch_stmt          : 10
type                 : 48 49 55 56 63 64 68 69 72 75 79
var_decl             : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . short_var_decl
    (5) statement -> . print_stmt
    (6) statement -> . for_stmt
    (7) statement -> . function_decl
    (8) statement -> . slice_decl
    (9) statement -> . var_decl
    (10) statement -> . switch_stmt
    (11) statement -> . map_decl
    (12) statement -> . multi_param_function
    (13) statement -> . scan_stmt
    (14) statement -> . complete_var_dec
    (15) statement -> . block
    (16) statement -> . if_else
    (17) statement -> . array_decl
    (18) statement -> . function_no_return
    (19) statement -> . increment_stmt
    (44) short_var_decl -> . VARIABLE DECLARE_ASSIGN expression
    (45) print_stmt -> . FMT DOT PRINTLN LPAREN expression RPAREN
    (46) print_stmt -> . FMT DOT PRINT LPAREN expression RPAREN
    (47) for_stmt -> . FOR condition block
    (48) function_decl -> . FUNC VARIABLE LPAREN RPAREN type LBRACE return_stmt RBRACE
    (49) function_decl -> . FUNC VARIABLE LPAREN RPAREN type LBRACE statements return_stmt RBRACE
    (55) slice_decl -> . VARIABLE DECLARE_ASSIGN LBRACKET RBRACKET type LBRACE RBRACE
    (56) var_decl -> . VAR VARIABLE type
    (57) switch_stmt -> . SWITCH VARIABLE LBRACE case_list default_stmt RBRACE
    (63) map_decl -> . VARIABLE DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE RBRACE
    (64) map_decl -> . VARIABLE DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE map_items RBRACE
    (68) multi_param_function -> . FUNC VARIABLE LPAREN parameter_list RPAREN type LBRACE return_stmt RBRACE
    (69) multi_param_function -> . FUNC VARIABLE LPAREN parameter_list RPAREN type LBRACE statements return_stmt RBRACE
    (73) scan_stmt -> . FMT DOT SCAN LPAREN AMPERSAND VARIABLE RPAREN
    (75) complete_var_dec -> . VAR VARIABLE type ASSIGN expression
    (76) block -> . LBRACE statements RBRACE
    (77) block -> . LBRACE RBRACE
    (78) if_else -> . IF condition block ELSE block
    (79) array_decl -> . VARIABLE DECLARE_ASSIGN LBRACKET INTEGER RBRACKET type LBRACE expression_list RBRACE
    (80) function_no_return -> . FUNC VARIABLE LPAREN parameter_list RPAREN block
    (74) increment_stmt -> . VARIABLE INCREMENT

    VARIABLE        shift and go to state 20
    FMT             shift and go to state 21
    FOR             shift and go to state 22
    FUNC            shift and go to state 23
    VAR             shift and go to state 25
    SWITCH          shift and go to state 26
    LBRACE          shift and go to state 24
    IF              shift and go to state 27

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    short_var_decl                 shift and go to state 4
    print_stmt                     shift and go to state 5
    for_stmt                       shift and go to state 6
    function_decl                  shift and go to state 7
    slice_decl                     shift and go to state 8
    var_decl                       shift and go to state 9
    switch_stmt                    shift and go to state 10
    map_decl                       shift and go to state 11
    multi_param_function           shift and go to state 12
    scan_stmt                      shift and go to state 13
    complete_var_dec               shift and go to state 14
    block                          shift and go to state 15
    if_else                        shift and go to state 16
    array_decl                     shift and go to state 17
    function_no_return             shift and go to state 18
    increment_stmt                 shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . short_var_decl
    (5) statement -> . print_stmt
    (6) statement -> . for_stmt
    (7) statement -> . function_decl
    (8) statement -> . slice_decl
    (9) statement -> . var_decl
    (10) statement -> . switch_stmt
    (11) statement -> . map_decl
    (12) statement -> . multi_param_function
    (13) statement -> . scan_stmt
    (14) statement -> . complete_var_dec
    (15) statement -> . block
    (16) statement -> . if_else
    (17) statement -> . array_decl
    (18) statement -> . function_no_return
    (19) statement -> . increment_stmt
    (44) short_var_decl -> . VARIABLE DECLARE_ASSIGN expression
    (45) print_stmt -> . FMT DOT PRINTLN LPAREN expression RPAREN
    (46) print_stmt -> . FMT DOT PRINT LPAREN expression RPAREN
    (47) for_stmt -> . FOR condition block
    (48) function_decl -> . FUNC VARIABLE LPAREN RPAREN type LBRACE return_stmt RBRACE
    (49) function_decl -> . FUNC VARIABLE LPAREN RPAREN type LBRACE statements return_stmt RBRACE
    (55) slice_decl -> . VARIABLE DECLARE_ASSIGN LBRACKET RBRACKET type LBRACE RBRACE
    (56) var_decl -> . VAR VARIABLE type
    (57) switch_stmt -> . SWITCH VARIABLE LBRACE case_list default_stmt RBRACE
    (63) map_decl -> . VARIABLE DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE RBRACE
    (64) map_decl -> . VARIABLE DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE map_items RBRACE
    (68) multi_param_function -> . FUNC VARIABLE LPAREN parameter_list RPAREN type LBRACE return_stmt RBRACE
    (69) multi_param_function -> . FUNC VARIABLE LPAREN parameter_list RPAREN type LBRACE statements return_stmt RBRACE
    (73) scan_stmt -> . FMT DOT SCAN LPAREN AMPERSAND VARIABLE RPAREN
    (75) complete_var_dec -> . VAR VARIABLE type ASSIGN expression
    (76) block -> . LBRACE statements RBRACE
    (77) block -> . LBRACE RBRACE
    (78) if_else -> . IF condition block ELSE block
    (79) array_decl -> . VARIABLE DECLARE_ASSIGN LBRACKET INTEGER RBRACKET type LBRACE expression_list RBRACE
    (80) function_no_return -> . FUNC VARIABLE LPAREN parameter_list RPAREN block
    (74) increment_stmt -> . VARIABLE INCREMENT

    $end            reduce using rule 1 (program -> statements .)
    VARIABLE        shift and go to state 20
    FMT             shift and go to state 21
    FOR             shift and go to state 22
    FUNC            shift and go to state 23
    VAR             shift and go to state 25
    SWITCH          shift and go to state 26
    LBRACE          shift and go to state 24
    IF              shift and go to state 27

    statement                      shift and go to state 28
    short_var_decl                 shift and go to state 4
    print_stmt                     shift and go to state 5
    for_stmt                       shift and go to state 6
    function_decl                  shift and go to state 7
    slice_decl                     shift and go to state 8
    var_decl                       shift and go to state 9
    switch_stmt                    shift and go to state 10
    map_decl                       shift and go to state 11
    multi_param_function           shift and go to state 12
    scan_stmt                      shift and go to state 13
    complete_var_dec               shift and go to state 14
    block                          shift and go to state 15
    if_else                        shift and go to state 16
    array_decl                     shift and go to state 17
    function_no_return             shift and go to state 18
    increment_stmt                 shift and go to state 19

state 3

    (3) statements -> statement .

    VARIABLE        reduce using rule 3 (statements -> statement .)
    FMT             reduce using rule 3 (statements -> statement .)
    FOR             reduce using rule 3 (statements -> statement .)
    FUNC            reduce using rule 3 (statements -> statement .)
    VAR             reduce using rule 3 (statements -> statement .)
    SWITCH          reduce using rule 3 (statements -> statement .)
    LBRACE          reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    DEFAULT         reduce using rule 3 (statements -> statement .)
    CASE            reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> short_var_decl .

    VARIABLE        reduce using rule 4 (statement -> short_var_decl .)
    FMT             reduce using rule 4 (statement -> short_var_decl .)
    FOR             reduce using rule 4 (statement -> short_var_decl .)
    FUNC            reduce using rule 4 (statement -> short_var_decl .)
    VAR             reduce using rule 4 (statement -> short_var_decl .)
    SWITCH          reduce using rule 4 (statement -> short_var_decl .)
    LBRACE          reduce using rule 4 (statement -> short_var_decl .)
    IF              reduce using rule 4 (statement -> short_var_decl .)
    $end            reduce using rule 4 (statement -> short_var_decl .)
    RBRACE          reduce using rule 4 (statement -> short_var_decl .)
    RETURN          reduce using rule 4 (statement -> short_var_decl .)
    DEFAULT         reduce using rule 4 (statement -> short_var_decl .)
    CASE            reduce using rule 4 (statement -> short_var_decl .)


state 5

    (5) statement -> print_stmt .

    VARIABLE        reduce using rule 5 (statement -> print_stmt .)
    FMT             reduce using rule 5 (statement -> print_stmt .)
    FOR             reduce using rule 5 (statement -> print_stmt .)
    FUNC            reduce using rule 5 (statement -> print_stmt .)
    VAR             reduce using rule 5 (statement -> print_stmt .)
    SWITCH          reduce using rule 5 (statement -> print_stmt .)
    LBRACE          reduce using rule 5 (statement -> print_stmt .)
    IF              reduce using rule 5 (statement -> print_stmt .)
    $end            reduce using rule 5 (statement -> print_stmt .)
    RBRACE          reduce using rule 5 (statement -> print_stmt .)
    RETURN          reduce using rule 5 (statement -> print_stmt .)
    DEFAULT         reduce using rule 5 (statement -> print_stmt .)
    CASE            reduce using rule 5 (statement -> print_stmt .)


state 6

    (6) statement -> for_stmt .

    VARIABLE        reduce using rule 6 (statement -> for_stmt .)
    FMT             reduce using rule 6 (statement -> for_stmt .)
    FOR             reduce using rule 6 (statement -> for_stmt .)
    FUNC            reduce using rule 6 (statement -> for_stmt .)
    VAR             reduce using rule 6 (statement -> for_stmt .)
    SWITCH          reduce using rule 6 (statement -> for_stmt .)
    LBRACE          reduce using rule 6 (statement -> for_stmt .)
    IF              reduce using rule 6 (statement -> for_stmt .)
    $end            reduce using rule 6 (statement -> for_stmt .)
    RBRACE          reduce using rule 6 (statement -> for_stmt .)
    RETURN          reduce using rule 6 (statement -> for_stmt .)
    DEFAULT         reduce using rule 6 (statement -> for_stmt .)
    CASE            reduce using rule 6 (statement -> for_stmt .)


state 7

    (7) statement -> function_decl .

    VARIABLE        reduce using rule 7 (statement -> function_decl .)
    FMT             reduce using rule 7 (statement -> function_decl .)
    FOR             reduce using rule 7 (statement -> function_decl .)
    FUNC            reduce using rule 7 (statement -> function_decl .)
    VAR             reduce using rule 7 (statement -> function_decl .)
    SWITCH          reduce using rule 7 (statement -> function_decl .)
    LBRACE          reduce using rule 7 (statement -> function_decl .)
    IF              reduce using rule 7 (statement -> function_decl .)
    $end            reduce using rule 7 (statement -> function_decl .)
    RBRACE          reduce using rule 7 (statement -> function_decl .)
    RETURN          reduce using rule 7 (statement -> function_decl .)
    DEFAULT         reduce using rule 7 (statement -> function_decl .)
    CASE            reduce using rule 7 (statement -> function_decl .)


state 8

    (8) statement -> slice_decl .

    VARIABLE        reduce using rule 8 (statement -> slice_decl .)
    FMT             reduce using rule 8 (statement -> slice_decl .)
    FOR             reduce using rule 8 (statement -> slice_decl .)
    FUNC            reduce using rule 8 (statement -> slice_decl .)
    VAR             reduce using rule 8 (statement -> slice_decl .)
    SWITCH          reduce using rule 8 (statement -> slice_decl .)
    LBRACE          reduce using rule 8 (statement -> slice_decl .)
    IF              reduce using rule 8 (statement -> slice_decl .)
    $end            reduce using rule 8 (statement -> slice_decl .)
    RBRACE          reduce using rule 8 (statement -> slice_decl .)
    RETURN          reduce using rule 8 (statement -> slice_decl .)
    DEFAULT         reduce using rule 8 (statement -> slice_decl .)
    CASE            reduce using rule 8 (statement -> slice_decl .)


state 9

    (9) statement -> var_decl .

    VARIABLE        reduce using rule 9 (statement -> var_decl .)
    FMT             reduce using rule 9 (statement -> var_decl .)
    FOR             reduce using rule 9 (statement -> var_decl .)
    FUNC            reduce using rule 9 (statement -> var_decl .)
    VAR             reduce using rule 9 (statement -> var_decl .)
    SWITCH          reduce using rule 9 (statement -> var_decl .)
    LBRACE          reduce using rule 9 (statement -> var_decl .)
    IF              reduce using rule 9 (statement -> var_decl .)
    $end            reduce using rule 9 (statement -> var_decl .)
    RBRACE          reduce using rule 9 (statement -> var_decl .)
    RETURN          reduce using rule 9 (statement -> var_decl .)
    DEFAULT         reduce using rule 9 (statement -> var_decl .)
    CASE            reduce using rule 9 (statement -> var_decl .)


state 10

    (10) statement -> switch_stmt .

    VARIABLE        reduce using rule 10 (statement -> switch_stmt .)
    FMT             reduce using rule 10 (statement -> switch_stmt .)
    FOR             reduce using rule 10 (statement -> switch_stmt .)
    FUNC            reduce using rule 10 (statement -> switch_stmt .)
    VAR             reduce using rule 10 (statement -> switch_stmt .)
    SWITCH          reduce using rule 10 (statement -> switch_stmt .)
    LBRACE          reduce using rule 10 (statement -> switch_stmt .)
    IF              reduce using rule 10 (statement -> switch_stmt .)
    $end            reduce using rule 10 (statement -> switch_stmt .)
    RBRACE          reduce using rule 10 (statement -> switch_stmt .)
    RETURN          reduce using rule 10 (statement -> switch_stmt .)
    DEFAULT         reduce using rule 10 (statement -> switch_stmt .)
    CASE            reduce using rule 10 (statement -> switch_stmt .)


state 11

    (11) statement -> map_decl .

    VARIABLE        reduce using rule 11 (statement -> map_decl .)
    FMT             reduce using rule 11 (statement -> map_decl .)
    FOR             reduce using rule 11 (statement -> map_decl .)
    FUNC            reduce using rule 11 (statement -> map_decl .)
    VAR             reduce using rule 11 (statement -> map_decl .)
    SWITCH          reduce using rule 11 (statement -> map_decl .)
    LBRACE          reduce using rule 11 (statement -> map_decl .)
    IF              reduce using rule 11 (statement -> map_decl .)
    $end            reduce using rule 11 (statement -> map_decl .)
    RBRACE          reduce using rule 11 (statement -> map_decl .)
    RETURN          reduce using rule 11 (statement -> map_decl .)
    DEFAULT         reduce using rule 11 (statement -> map_decl .)
    CASE            reduce using rule 11 (statement -> map_decl .)


state 12

    (12) statement -> multi_param_function .

    VARIABLE        reduce using rule 12 (statement -> multi_param_function .)
    FMT             reduce using rule 12 (statement -> multi_param_function .)
    FOR             reduce using rule 12 (statement -> multi_param_function .)
    FUNC            reduce using rule 12 (statement -> multi_param_function .)
    VAR             reduce using rule 12 (statement -> multi_param_function .)
    SWITCH          reduce using rule 12 (statement -> multi_param_function .)
    LBRACE          reduce using rule 12 (statement -> multi_param_function .)
    IF              reduce using rule 12 (statement -> multi_param_function .)
    $end            reduce using rule 12 (statement -> multi_param_function .)
    RBRACE          reduce using rule 12 (statement -> multi_param_function .)
    RETURN          reduce using rule 12 (statement -> multi_param_function .)
    DEFAULT         reduce using rule 12 (statement -> multi_param_function .)
    CASE            reduce using rule 12 (statement -> multi_param_function .)


state 13

    (13) statement -> scan_stmt .

    VARIABLE        reduce using rule 13 (statement -> scan_stmt .)
    FMT             reduce using rule 13 (statement -> scan_stmt .)
    FOR             reduce using rule 13 (statement -> scan_stmt .)
    FUNC            reduce using rule 13 (statement -> scan_stmt .)
    VAR             reduce using rule 13 (statement -> scan_stmt .)
    SWITCH          reduce using rule 13 (statement -> scan_stmt .)
    LBRACE          reduce using rule 13 (statement -> scan_stmt .)
    IF              reduce using rule 13 (statement -> scan_stmt .)
    $end            reduce using rule 13 (statement -> scan_stmt .)
    RBRACE          reduce using rule 13 (statement -> scan_stmt .)
    RETURN          reduce using rule 13 (statement -> scan_stmt .)
    DEFAULT         reduce using rule 13 (statement -> scan_stmt .)
    CASE            reduce using rule 13 (statement -> scan_stmt .)


state 14

    (14) statement -> complete_var_dec .

    VARIABLE        reduce using rule 14 (statement -> complete_var_dec .)
    FMT             reduce using rule 14 (statement -> complete_var_dec .)
    FOR             reduce using rule 14 (statement -> complete_var_dec .)
    FUNC            reduce using rule 14 (statement -> complete_var_dec .)
    VAR             reduce using rule 14 (statement -> complete_var_dec .)
    SWITCH          reduce using rule 14 (statement -> complete_var_dec .)
    LBRACE          reduce using rule 14 (statement -> complete_var_dec .)
    IF              reduce using rule 14 (statement -> complete_var_dec .)
    $end            reduce using rule 14 (statement -> complete_var_dec .)
    RBRACE          reduce using rule 14 (statement -> complete_var_dec .)
    RETURN          reduce using rule 14 (statement -> complete_var_dec .)
    DEFAULT         reduce using rule 14 (statement -> complete_var_dec .)
    CASE            reduce using rule 14 (statement -> complete_var_dec .)


state 15

    (15) statement -> block .

    VARIABLE        reduce using rule 15 (statement -> block .)
    FMT             reduce using rule 15 (statement -> block .)
    FOR             reduce using rule 15 (statement -> block .)
    FUNC            reduce using rule 15 (statement -> block .)
    VAR             reduce using rule 15 (statement -> block .)
    SWITCH          reduce using rule 15 (statement -> block .)
    LBRACE          reduce using rule 15 (statement -> block .)
    IF              reduce using rule 15 (statement -> block .)
    $end            reduce using rule 15 (statement -> block .)
    RBRACE          reduce using rule 15 (statement -> block .)
    RETURN          reduce using rule 15 (statement -> block .)
    DEFAULT         reduce using rule 15 (statement -> block .)
    CASE            reduce using rule 15 (statement -> block .)


state 16

    (16) statement -> if_else .

    VARIABLE        reduce using rule 16 (statement -> if_else .)
    FMT             reduce using rule 16 (statement -> if_else .)
    FOR             reduce using rule 16 (statement -> if_else .)
    FUNC            reduce using rule 16 (statement -> if_else .)
    VAR             reduce using rule 16 (statement -> if_else .)
    SWITCH          reduce using rule 16 (statement -> if_else .)
    LBRACE          reduce using rule 16 (statement -> if_else .)
    IF              reduce using rule 16 (statement -> if_else .)
    $end            reduce using rule 16 (statement -> if_else .)
    RBRACE          reduce using rule 16 (statement -> if_else .)
    RETURN          reduce using rule 16 (statement -> if_else .)
    DEFAULT         reduce using rule 16 (statement -> if_else .)
    CASE            reduce using rule 16 (statement -> if_else .)


state 17

    (17) statement -> array_decl .

    VARIABLE        reduce using rule 17 (statement -> array_decl .)
    FMT             reduce using rule 17 (statement -> array_decl .)
    FOR             reduce using rule 17 (statement -> array_decl .)
    FUNC            reduce using rule 17 (statement -> array_decl .)
    VAR             reduce using rule 17 (statement -> array_decl .)
    SWITCH          reduce using rule 17 (statement -> array_decl .)
    LBRACE          reduce using rule 17 (statement -> array_decl .)
    IF              reduce using rule 17 (statement -> array_decl .)
    $end            reduce using rule 17 (statement -> array_decl .)
    RBRACE          reduce using rule 17 (statement -> array_decl .)
    RETURN          reduce using rule 17 (statement -> array_decl .)
    DEFAULT         reduce using rule 17 (statement -> array_decl .)
    CASE            reduce using rule 17 (statement -> array_decl .)


state 18

    (18) statement -> function_no_return .

    VARIABLE        reduce using rule 18 (statement -> function_no_return .)
    FMT             reduce using rule 18 (statement -> function_no_return .)
    FOR             reduce using rule 18 (statement -> function_no_return .)
    FUNC            reduce using rule 18 (statement -> function_no_return .)
    VAR             reduce using rule 18 (statement -> function_no_return .)
    SWITCH          reduce using rule 18 (statement -> function_no_return .)
    LBRACE          reduce using rule 18 (statement -> function_no_return .)
    IF              reduce using rule 18 (statement -> function_no_return .)
    $end            reduce using rule 18 (statement -> function_no_return .)
    RBRACE          reduce using rule 18 (statement -> function_no_return .)
    RETURN          reduce using rule 18 (statement -> function_no_return .)
    DEFAULT         reduce using rule 18 (statement -> function_no_return .)
    CASE            reduce using rule 18 (statement -> function_no_return .)


state 19

    (19) statement -> increment_stmt .

    VARIABLE        reduce using rule 19 (statement -> increment_stmt .)
    FMT             reduce using rule 19 (statement -> increment_stmt .)
    FOR             reduce using rule 19 (statement -> increment_stmt .)
    FUNC            reduce using rule 19 (statement -> increment_stmt .)
    VAR             reduce using rule 19 (statement -> increment_stmt .)
    SWITCH          reduce using rule 19 (statement -> increment_stmt .)
    LBRACE          reduce using rule 19 (statement -> increment_stmt .)
    IF              reduce using rule 19 (statement -> increment_stmt .)
    $end            reduce using rule 19 (statement -> increment_stmt .)
    RBRACE          reduce using rule 19 (statement -> increment_stmt .)
    RETURN          reduce using rule 19 (statement -> increment_stmt .)
    DEFAULT         reduce using rule 19 (statement -> increment_stmt .)
    CASE            reduce using rule 19 (statement -> increment_stmt .)


state 20

    (44) short_var_decl -> VARIABLE . DECLARE_ASSIGN expression
    (55) slice_decl -> VARIABLE . DECLARE_ASSIGN LBRACKET RBRACKET type LBRACE RBRACE
    (63) map_decl -> VARIABLE . DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE RBRACE
    (64) map_decl -> VARIABLE . DECLARE_ASSIGN MAP LBRACKET STRING_TYPE RBRACKET type LBRACE map_items RBRACE
    (79) array_decl -> VARIABLE . DECLARE_ASSIGN LBRACKET INTEGER RBRACKET type LBRACE expression_list RBRACE
    (74) increment_stmt -> VARIABLE . INCREMENT

    DECLARE_ASSIGN  shift and go to state 29
    INCREMENT       shift and go to state 30


state 21

    (45) print_stmt -> FMT . DOT PRINTLN LPAREN expression RPAREN
    (46) print_stmt -> FMT . DOT PRINT LPAREN expression RPAREN
    (73) scan_stmt -> FMT . DOT SCAN LPAREN AMPERSAND VARIABLE RPAREN

    DOT             shift and go to state 31


state 22

    (47) for_stmt -> FOR . condition block
    (34) condition -> . expression GT expression
    (35) condition -> . expression LT expression
    (36) condition -> . expression GE expression
    (37) condition -> . expression LE expression
    (38) condition -> . expression EQ expression
    (39) condition -> . expression NE expression
    (40) condition -> . condition AND condition
    (41) condition -> . condition OR condition
    (42) condition -> . NOT condition
    (43) condition -> . expression
    (20) expression -> . expression PLUS expression
    (21) expression -> . expression MINUS expression
    (22) expression -> . expression TIMES expression
    (23) expression -> . expression DIVIDE expression
    (24) expression -> . expression MODULO expression
    (25) expression -> . LPAREN expression RPAREN
    (26) expression -> . INTEGER
    (27) expression -> . FLOAT
    (28) expression -> . STRING
    (29) expression -> . VARIABLE
    (30) expression -> . TRUE
    (31) expression -> . FALSE

    NOT             shift and go to state 34
    LPAREN          shift and go to state 35
    INTEGER         shift and go to state 36
    FLOAT           shift and go to state 37
    STRING          shift and go to state 38
    VARIABLE        shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41

    condition                      shift and go to state 32
    expression                     shift and go to state 33

state 23

    (48) function_decl -> FUNC . VARIABLE LPAREN RPAREN type LBRACE return_stmt RBRACE
    (49) function_decl -> FUNC . VARIABLE LPAREN RPAREN type LBRACE statements return_stmt RBRACE
    (68) multi_param_function -> FUNC . VARIABLE LPAREN parameter_list RPAREN type LBRACE return_stmt RBRACE
    (69) multi_param_function -> FUNC . VARIABLE LPAREN parameter_list RPAREN type LBRACE statements return_stmt RBRACE
    (80) function_no_return -> FUNC . VARIABLE LPAREN parameter_list RPAREN block

    VARIABLE        shift and go to state 42


state 24
